# clib

./: README.md  main.cpp
cmake_build/: build_all.sh
cmake_build/code/: CMakeLists.txt
cmake_build/code/lib/: CMakeLists.txt
cmake_build/code2/: CMakeLists.txt  build.sh
cmake_build/code2/src/: CMakeLists.txt  main.cpp
cmake_build/lib/: build.sh
cmake_build/lib/lib/: CMakeLists.txt
cmake_build/test/: CMakeLists.txt  build.sh
cmake_build/test/src/: CMakeLists.txt
shell_build/: build_so.sh  build_static.sh  hello.cpp  hello.h
